# C-SDL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  color-modulation.cpp  color-typing.cpp  compile_commands.json  geometry-rendering.cpp  hello.cpp  main.cpp  naruto-sprite.cpp  sdl-image.cpp  texture-rendering.cpp  viewport.cpp
files/: BlitScaledImages.cpp  animated-sprites.cpp  clip-sprite-sheets.cpp  color-typing.cpp  eventDriven.cpp  img-rendering.cpp  rotation-flip.cpp  sdl-image.cpp
src/: LTexture.cpp  LTexture.h
